--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,14 +4,18 @@
     <string name="title_activity_settings">Settings</string>
 
     <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
+    <string name="wp_header">语音唤醒识别</string>
+    <string name="tts_header">语音合成</string>
+    <string name="other_header">其他</string>
 
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
+    <!-- wp Preferences -->
+    <string name="name_title">名字</string>
+    <string name="voice_title">人声模板</string>
+    <string name="name_value">小O小O</string>
+    <string name="voice_value">普通女声</string>
 
-    <!-- Sync Preferences -->
+
+    <!-- tts Preferences -->
     <string name="sync_title">Sync email periodically</string>
     <string name="attachment_title">Download incoming attachments</string>
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
